[metadata]
name = Turing Pi BMC
version = 1.0.0
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package to manage a Turing Pi 2 cluster using the BMC API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petermcd/turing-pi-bmc
project_urls =
    Bug Tracker = https://github.com/petermcd/turing-pi-bmc/issues
    Source = https://github.com/petermcd/turing-pi-bmc
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.9
install_requires = requests; semver

[options.extras_require]
test = pre-commit;
build = wheel; build;

[flake8]
max_line_length = 120
